commting change question6

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /react-assignment/question4/node_modules
 /react-assignment/question5/node_modules
 /react-assignment/question9/node_modules
+/react-assignment/question6/node_modules
