--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /react-assignment/question5/node_modules
 /react-assignment/question9/node_modules
 /react-assignment/question6/node_modules
+/react-assignment/myapp/node_modules
